{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 320,
  "lineage": "9c09756e-e1ca-cccc-4a5b-712e251da1d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:internet-gateway/igw-0bf8f0b7dba08d3a7",
            "id": "igw-0bf8f0b7dba08d3a7",
            "owner_id": "908774804482",
            "tags": {
              "Name": "devops-trial-igw"
            },
            "tags_all": {
              "Name": "devops-trial-igw"
            },
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:loadbalancer/app/devops-trial-alb/a74147a88d316f92",
            "arn_suffix": "app/devops-trial-alb/a74147a88d316f92",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-trial-alb-1419396058.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:loadbalancer/app/devops-trial-alb/a74147a88d316f92",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-trial-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-062c539a0fc7396bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07fe8b32ce42ab6ae"
              },
              {
                "subnet_id": "subnet-0b1a723a4ed71bd8a"
              }
            ],
            "subnets": [
              "subnet-07fe8b32ce42ab6ae",
              "subnet-0b1a723a4ed71bd8a"
            ],
            "tags": {
              "Name": "devops-trial-alb"
            },
            "tags_all": {
              "Name": "devops-trial-alb"
            },
            "vpc_id": "vpc-08a35c657e986ecac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:listener/app/devops-trial-alb/a74147a88d316f92/4cb86ec19c24a410",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:targetgroup/devops-trial-tg/c0e8afdf7905a025",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:listener/app/devops-trial-alb/a74147a88d316f92/4cb86ec19c24a410",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:loadbalancer/app/devops-trial-alb/a74147a88d316f92",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:targetgroup/devops-trial-tg/c0e8afdf7905a025",
            "arn_suffix": "targetgroup/devops-trial-tg/c0e8afdf7905a025",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:908774804482:targetgroup/devops-trial-tg/c0e8afdf7905a025",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-trial-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "devops-trial-tg"
            },
            "tags_all": {
              "Name": "devops-trial-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bf8f0b7dba08d3a7",
            "id": "r-rtb-090498702fa2495081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090498702fa249508",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:route-table/rtb-090498702fa249508",
            "id": "rtb-090498702fa249508",
            "owner_id": "908774804482",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-trial-public-rt"
            },
            "tags_all": {
              "Name": "devops-trial-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05749690253f416d4",
            "route_table_id": "rtb-090498702fa249508",
            "subnet_id": "subnet-07fe8b32ce42ab6ae"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc1e7a43a5d86122",
            "route_table_id": "rtb-090498702fa249508",
            "subnet_id": "subnet-0b1a723a4ed71bd8a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:security-group/sg-062c539a0fc7396bf",
            "description": "ALB SG - allow HTTP 80 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062c539a0fc7396bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-trial-alb-sg",
            "name_prefix": "",
            "owner_id": "908774804482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-trial-alb-sg"
            },
            "tags_all": {
              "Name": "devops-trial-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:security-group/sg-0b80c1d70ec7583f1",
            "description": "Service SG - allow traffic only from ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b80c1d70ec7583f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB on container port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062c539a0fc7396bf"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "devops-trial-service-sg",
            "name_prefix": "",
            "owner_id": "908774804482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-trial-service-sg"
            },
            "tags_all": {
              "Name": "devops-trial-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:security-group/sg-06c558ae1a54c58c4",
            "description": "Allow HTTPS from ECS service to VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c558ae1a54c58c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from service tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b80c1d70ec7583f1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-trial-vpce-sg",
            "name_prefix": "",
            "owner_id": "908774804482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-trial-vpce-sg"
            },
            "tags_all": {
              "Name": "devops-trial-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.service",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:subnet/subnet-07fe8b32ce42ab6ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fe8b32ce42ab6ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908774804482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-trial-public-a"
            },
            "tags_all": {
              "Name": "devops-trial-public-a"
            },
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:subnet/subnet-0b1a723a4ed71bd8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1a723a4ed71bd8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908774804482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-trial-public-b"
            },
            "tags_all": {
              "Name": "devops-trial-public-b"
            },
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:vpc/vpc-08a35c657e986ecac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047141184d2086a1d",
            "default_route_table_id": "rtb-033f892b513057d44",
            "default_security_group_id": "sg-04ddc0a5419e6d336",
            "dhcp_options_id": "dopt-0955782f38c6b7719",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a35c657e986ecac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033f892b513057d44",
            "owner_id": "908774804482",
            "tags": {
              "Name": "devops-trial-vpc"
            },
            "tags_all": {
              "Name": "devops-trial-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:vpc-endpoint/vpce-0d2d5e3b9382ce8d1",
            "dns_entry": [
              {
                "dns_name": "vpce-0d2d5e3b9382ce8d1-pakbjlhy.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0d2d5e3b9382ce8d1-pakbjlhy-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0d2d5e3b9382ce8d1-pakbjlhy-eu-west-1b.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "api.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z00727272PI6ZKNHJ8B9V"
              },
              {
                "dns_name": "ecr.eu-west-1.api.aws",
                "hosted_zone_id": "Z00694081FGRH8Z0S3Y1N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d2d5e3b9382ce8d1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-000bc75a95313972a",
              "eni-095c8f10d57ec6950"
            ],
            "owner_id": "908774804482",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c558ae1a54c58c4"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.156",
                "subnet_id": "subnet-07fe8b32ce42ab6ae"
              },
              {
                "ipv4": "10.0.2.171",
                "subnet_id": "subnet-0b1a723a4ed71bd8a"
              }
            ],
            "subnet_ids": [
              "subnet-07fe8b32ce42ab6ae",
              "subnet-0b1a723a4ed71bd8a"
            ],
            "tags": {
              "Name": "devops-trial-vpce-ecr-api"
            },
            "tags_all": {
              "Name": "devops-trial-vpce-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.service",
            "aws_security_group.vpce",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:vpc-endpoint/vpce-0526f3e4ec40e29cd",
            "dns_entry": [
              {
                "dns_name": "vpce-0526f3e4ec40e29cd-cdjuujtv.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0526f3e4ec40e29cd-cdjuujtv-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0526f3e4ec40e29cd-cdjuujtv-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03795231OW7RGXSY4UB1"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03795231OW7RGXSY4UB1"
              },
              {
                "dns_name": "dkr-ecr.eu-west-1.on.aws",
                "hosted_zone_id": "Z08815213L5F9RLTKL1W"
              },
              {
                "dns_name": "*.dkr-ecr.eu-west-1.on.aws",
                "hosted_zone_id": "Z08815213L5F9RLTKL1W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0526f3e4ec40e29cd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b9f66e5d1aa0aa4",
              "eni-048b05ac40ed955df"
            ],
            "owner_id": "908774804482",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c558ae1a54c58c4"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.119",
                "subnet_id": "subnet-07fe8b32ce42ab6ae"
              },
              {
                "ipv4": "10.0.2.187",
                "subnet_id": "subnet-0b1a723a4ed71bd8a"
              }
            ],
            "subnet_ids": [
              "subnet-07fe8b32ce42ab6ae",
              "subnet-0b1a723a4ed71bd8a"
            ],
            "tags": {
              "Name": "devops-trial-vpce-ecr-dkr"
            },
            "tags_all": {
              "Name": "devops-trial-vpce-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.service",
            "aws_security_group.vpce",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:vpc-endpoint/vpce-0c7f966fb77b1441d",
            "dns_entry": [
              {
                "dns_name": "vpce-0c7f966fb77b1441d-0tteqts4.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0c7f966fb77b1441d-0tteqts4-eu-west-1a.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0c7f966fb77b1441d-0tteqts4-eu-west-1b.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "logs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0389167LGVL67DFYVHD"
              },
              {
                "dns_name": "logs.eu-west-1.api.aws",
                "hosted_zone_id": "Z0379257LBLXYVSE7P2N"
              },
              {
                "dns_name": "streaming-logs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z00656003UECGO2F9YG2U"
              },
              {
                "dns_name": "streaming-logs.eu-west-1.api.aws",
                "hosted_zone_id": "Z00728902MVGSQFJTEA5A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c7f966fb77b1441d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-041c3012e721a8292",
              "eni-0773f9fcd6bb0e188"
            ],
            "owner_id": "908774804482",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c558ae1a54c58c4"
            ],
            "service_name": "com.amazonaws.eu-west-1.logs",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.218",
                "subnet_id": "subnet-07fe8b32ce42ab6ae"
              },
              {
                "ipv4": "10.0.2.84",
                "subnet_id": "subnet-0b1a723a4ed71bd8a"
              }
            ],
            "subnet_ids": [
              "subnet-07fe8b32ce42ab6ae",
              "subnet-0b1a723a4ed71bd8a"
            ],
            "tags": {
              "Name": "devops-trial-vpce-logs"
            },
            "tags_all": {
              "Name": "devops-trial-vpce-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.service",
            "aws_security_group.vpce",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:908774804482:vpc-endpoint/vpce-08c1894e4409ecba8",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-08c1894e4409ecba8",
            "owner_id": "908774804482",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-090498702fa249508"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "service_region": "eu-west-1",
            "state": "available",
            "tags": {
              "Name": "devops-trial-vpce-s3"
            },
            "tags_all": {
              "Name": "devops-trial-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08a35c657e986ecac"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}